# logitools

./: .gitignore  AUTHORS  README  TODO  index.html
Attic/g15daemon-audio-plugins/g15mpd/: g15mpd.c
Attic/g15daemon-clients/g15-utils/: g15tailf.c
Attic/g15daemon-clients/g15macro/: g15macro.c
Attic/g15daemon-clients/g15message/: g15message.c
Attic/g15daemon-clients/g15scriptool/: g15scriptool.c
Attic/g15daemon-wip/: README.FreeBSD
Attic/g15daemon-wip/g15daemon/: linked_lists.c
Attic/g15daemon-wip/plugins/: g15_plugin_uinput.c
Attic/g15daemon/g15daemon/: g15_net.c  gfx_primitives.c  linked_lists.c  main.c
Attic/g15daemon/libg15daemon_client/: g15daemon_net.c
g15daemon/g15daemon/: ChangeLog  README  configure.in
g15daemon/g15daemon-clients/g15-utils/: g15term.c
g15daemon/g15daemon-clients/g15dpms-monitor/: g15dpms-monitor.c
g15daemon/g15daemon-clients/g15stats/: g15stats.c
g15daemon/g15daemon-wip/: ChangeLog  README.Linux  configure.in
g15daemon/g15daemon-wip/g15daemon/: g15_plugins.c  g15daemon.h  lcdclient_test.c  main.c  utility_funcs.c
g15daemon/g15daemon-wip/libg15daemon_client/: g15daemon_client.h  g15daemon_net.c
g15daemon/g15daemon-wip/plugins/: g15_plugin_clock.c  g15_plugin_template.c
g15daemon/g15daemon/g15daemon/: g15_uinput.c  g15daemon.h  lcdclient_test.c  utility_funcs.c
g15daemon/g15daemon/libg15daemon_client/: g15daemon_client.h
g15tools/libg15/: libg15.c  libg15.h
liblogitech/: CMakeLists.txt  config.h.in  liblogitech.c  liblogitech.h  liblogitech.pc.in
liblogitech/arch/: PKGBUILD
liblogitech/cmake/Modules/: FindLibLogitech.cmake
liblogitechrender/: CMakeLists.txt  Doxyfile  config.h.in  liblogitechrender.pc.in
liblogitechrender/arch/: PKGBUILD
liblogitechrender/cmake/Modules/: FindLibLogitechRender.cmake
liblogitechrender/src/: liblogitechrender.h  logitechfontconvert.c  pixel.c  screen.c  text.c
logitoolsd/: .CMakeLists.txt.kate-swp  CMakeLists.txt  README  config.h.in  liblogitoolsdl.pc.in
logitoolsd-clients/logitools-macro/: AUTHORS  CMakeLists.txt  ChangeLog  README  config.h.in  fileHandling.c  logitools-macro.c  logitools-macro.h
logitoolsd/Documentation/: logitoolsd.1  logitoolsdl.3
logitoolsd/cmake/Modules/: FindLibLogiToolsDL.cmake
logitoolsd/liblogitoolsdl/: logitoolsdl_net.c
logitoolsd/logitoolsd/: linked_lists.c  logitools_plugins.c  logitoolsd.h  main.c  utility_funcs.c
logitoolsd/plugins/: g15_plugin_clock.c  g15_plugin_net.c  g15_plugin_uinput.c
